# crystalreports

./: .gitignore  LICENSE  README.md  analyze_alignment.py  fix_alignment.py  pyproject.toml
crystalreports/: __init__.py  crpe_engine.py  exceptions.py  models.py  ole_parser.py  report.py
tests/: test_crpe_engine.py  test_ole_parser.py  test_report.py
